# Load-balancer

./: .clang-format  .gitignore  README.md  TODO.txt
.github/workflows/: ci.yaml
SocketWrapperLib/: CMakeLists.txt  scripted-build.sh
SocketWrapperLib/include/: SocketWrapper.hpp
SocketWrapperLib/src/: SocketWrapper.cpp
client/: CMakeLists.txt  clients_start.sh  http-client.cpp  scripted_build.sh
load-balancer/: CMakeLists.txt  scripted-build.sh  settings.json
load-balancer/include/: SocketWrapper.hpp  client-com-handler.hpp  iparser-factory.hpp  iparser.hpp  json-parser-factory.hpp  json-parser.hpp  load-balancer-creator.hpp  load-balancer-interface.hpp  load-balancer-mods.hpp  load-balancer-pseudo.hpp  load-balancer-roundrobin.hpp  load-balancer.hpp  parser-types.hpp  server-com-handler.hpp  server-info.hpp  settings-setter.hpp  setup-info.hpp  thread-pool.hpp  txt-parser-factory.hpp  txt-parser.hpp
load-balancer/include/balancer/: client-com-handler.hpp  load-balancer-interface.hpp  load-balancer-pseudo.hpp  load-balancer-roundrobin.hpp  server-com-handler.hpp
load-balancer/include/parser/: iparser-factory.hpp  iparser.hpp  json-parser-factory.hpp  json-parser.hpp  txt-parser-factory.hpp  txt-parser.hpp
load-balancer/include/utility/: thread-pool.hpp
load-balancer/include/utility/settup/: load-balancer-creator.hpp  settings-setter.hpp  setup-info.hpp
load-balancer/include/utility/setup/: load-balancer-creator.hpp  settings-setter.hpp  setup-info.hpp
load-balancer/src/: SocketWrapper.cpp  client-com-handler.cpp  json-parser.cpp  load-balancer-interface.cpp  load-balancer-pseudo.cpp  load-balancer-roundrobin.cpp  load-balancer.cpp  main.cpp  server-com-handler.cpp  settings-setter.cpp  thread-pool.cpp
load-balancer/src/balancer/: client-com-handler.cpp  load-balancer-interface.cpp  load-balancer-pseudo.cpp  load-balancer-roundrobin.cpp  server-com-handler.cpp
load-balancer/src/utility/setup/: settings-setter.cpp
server/: CMakeLists.txt  http-server.cpp  scripted_build.sh  server
